bambu-macro/rust_hls_macro/tests/fails_on_nested_module.stderr
error: HLS modules must not be nested
  --> tests/fails_on_nested_module.rs:13:13
   |
13 |     pub mod other {
   |             ^^^^^

error: HLS macro must only be applied to modules and the main function
  --> tests/fails_on_nested_module.rs:14:11
   |
14 |         #[hls]
   |           ^^^
